--- a/tailwindCss/src/index.html
+++ b/tailwindCss/src/index.html
@@ -8,24 +8,42 @@
     <link href="output.css" rel="stylesheet">
 </head>
 
-<body class="bg-black text-white ">
-    <header class="flex justify-around">
-        <button></button>
+
+<body class="bg-black text-white">
+
+    <header>
+        <div class="max-w-2xl flex justify-around items-center py-10 px-10">
+            <button onclick="">
+                <img src="images/menu.png" alt="Menu" class="w-8 h-8">
+            </button>
+            <div>
+                <img src="images/logo.png" alt="Logo" class="w-12 h-12 mx-auto ">
+            </div>
+            <button onclick="">
+                <img src="images/recherche.png" alt="Recherche" class="w-8 h-8">
+            </button>
+        </div>
+
     </header>
     <main>
-        <section class="hero_section flex flex-col justify-center">
+        <section class="hero_section flex flex-col items-center justify-center space-y-6 py-10 px-4">
             <div class="image_hero">
-                <img src="images/photoHero.png" alt="h=image_hero">
+                <img src="images/photoHero.png" alt="h=image_hero" class="w-full max-w-md rounded-lg shadow-lg">
             </div>
 
-            <div class="text_hero">
-                <h1 class="text-xl font-medium">Retrouver toutes vos jeux videos au meme endroit</h1>
-                <p class="text-xs"> Ne restes plus bloque dans un donjon car nous sommes là pour vous aidez. Le 100% est atteignables
-                    n’hesitez pas nous vous proposons les jeux</p>
-                <button> toutes nos jeux</button>
+            <div class="text_hero space-y-4 flex flex-col items-start max-w-md mx-auto">
+                <h1 class="text-xl font-medium">Retrouver toutes vos jeux vidéos au même endroit</h1>
+                <p class="text-sm md:text-base text-gray-300">Ne restes plus bloqué dans un donjon car nous sommes là
+                    pour vous aider. Le 100% est atteignable, n’hésitez pas, nous vous proposons les jeux.</p>
+                <button
+                    class="hover:bg-white hover:text-amber-500 text-black bg-amber-500 font-semibold py-2 px-6 rounded-3xl">
+                    toutes nos jeux
+                </button>
             </div>
-
         </section>
+        <div class="cards flex flex-col justify-center gap-3 items-center">
+
+        </div>
     </main>
     <footer></footer>
     <script src="script.js"></script>
