--- a/tailwindCss/src/favoris.html
+++ b/tailwindCss/src/favoris.html
@@ -10,7 +10,6 @@
 
 
 <body class="bg-black text-white">
-
     <header>
         <div class="max-w-2xl flex justify-around items-center m-2">
             <!--menu -->
@@ -19,7 +18,7 @@
                     <img src="images/menu.png" alt="Menu" class="w-8 h-8">
                 </button>
                 <!-- div choix menu -->
-                <div id="menu" class="hidden flex flex-col mt-2 space-y-2 bg-gray-800">
+                <div id="menu" class="hidden flex-col mt-2 space-y-2 bg-gray-800">
                     <a href="index.html" class="bg-amber-500 text-white px-4 py-2 rounded text-center">Home</a>
                     <a href="favoris.html" class="bg-amber-500 text-white px-4 py-2 rounded text-center">Mes Favoris</a>
                 </div>
