--- a/tailwindCss/src/index.html
+++ b/tailwindCss/src/index.html
@@ -39,8 +39,7 @@
                 <div id="RecherchechBar" class="hidden absolute left-0.5 mt-2 z-10">
                     <input type="text" id="searchInput" placeholder="Nom du jeu..."
                         class="px-4 py-2 rounded bg-white text-black w-48">
-                    <button onclick="RechercheJeu()"
-                        class="ml-2 bg-amber-500 text-white px-3 py-2 rounded">
+                    <button onclick="RechercheJeu()" class="ml-2 bg-amber-500 text-white px-3 py-2 rounded">
                         Rechercher
                     </button>
                 </div>
@@ -82,12 +81,11 @@
                         <h3 class="text-amber-500 font-semibold">Plateforme</h3>
                     </div>
                     <div class="mt-3 space-y-2 text-sm">
-                        <label class="flex items-center gap-2"><input type="checkbox"> PlayStation</label>
-                        <label class="flex items-center gap-2"><input type="checkbox"> PlayStation 4</label>
-                        <label class="flex items-center gap-2"><input type="checkbox"> Apple Macintosh</label>
-                        <label class="flex items-center gap-2 "><input type="checkbox"> Xbox Series S/X</label>
-                        <label class="flex items-center gap-2 "><input type="checkbox"> Nintendo Switch</label>
-                        <label class="flex items-center gap-2"><input type="checkbox"> Nintendo</label>
+                        <label class="flex items-center gap-2"><input type="checkbox">PlayStation</label>
+                        <label class="flex items-center gap-2"><input type="checkbox">PC</label>
+                        <label class="flex items-center gap-2"><input type="checkbox">Xbox</label>
+                        <label class="flex items-center gap-2 "><input type="checkbox">Linux</label>
+                        <label class="flex items-center gap-2"><input type="checkbox">mac</label>
                     </div>
                 </div>
 
@@ -118,6 +116,11 @@
                     </div>
                 </div>
 
+                <button id="button_filtrer" class="mt-4 bg-amber-500 text-white px-4 py-2 rounded">
+                    Appliquer filtre
+                </button>
+
+
             </div>
 
         </div>
@@ -126,6 +129,16 @@
 
         </div>
     </main>
+    <div id="pages" class="flex justify-center items-center  mb-1.5">
+        <button id="precedente" class="mt-4 bg-amber-500 text-white px-4 py-2 rounded">
+            page precedente
+        </button>
+        <button id="numpage" class="px-4 py-2 rounded">1</button>
+        <button id="next" class="mt-4 bg-amber-500 text-white px-4 py-2 rounded">
+            page suivante
+        </button>
+    </div>
+
     <footer></footer>
     <script src="script.js"></script>
 </body>
