--- a/tailwindCss/src/index.html
+++ b/tailwindCss/src/index.html
@@ -14,12 +14,12 @@
     <header>
         <div class="max-w-2xl flex justify-around items-center m-2">
             <!--menu -->
-            <div class="menu">
+            <div class="menu relative">
                 <button onclick="toggleMenu()">
                     <img src="images/menu.png" alt="Menu" class="w-8 h-8">
                 </button>
                 <!-- div choix menu -->
-                <div id="menuliens" class="hidden flex flex-col mt-2 space-y-2 bg-gray-800">
+                <div id="menuliens" class="hidden flex flex-col mt-2 space-y-2 bg-gray-800 z-10 absolute min-w-40">
                     <a href="index.html" class="bg-amber-500 text-white px-4 py-2 rounded text-center">Home</a>
                     <a href="favoris.html" class="bg-amber-500 text-white px-4 py-2 rounded text-center">Mes Favoris</a>
                 </div>
@@ -64,6 +64,20 @@
                 </button>
             </div>
         </section>
+        <!-- Details jeu -->
+        <div id="detailJeu"
+            class="hidden fixed top-20 inset-x-0 mx-auto bg-black bg-opacity-70 flex items-start justify-center z-50">
+            <div class="bg-amber-500 text-white rounded-2xl p-6 max-w-lg w-11/12 relative mt-6 shadow-lg">
+                <button id="closedetail" class="absolute top-3 right-3 text-white font-bold text-xl">&times;</button>
+                <h2 id="detailName" class="text-3xl font-bold mb-4"></h2>
+                <img id="detailImage" src="" alt="jeu image" class="w-full h-80 object-cover rounded-lg mb-4">
+                <p id="detailGenres" class="mb-2"></p>
+                <p id="detailPlatforms" class="mb-2"></p>
+                <p id="detailRating" class="mb-2"></p>
+                <p id="detailDescription" class="mb-2"></p>
+            </div>
+        </div>
+
         <!-- div filtres -->
         <div class="btn_filter flex flex-col items-center mb-6 relative">
             <button onclick="toggleFilter()"
@@ -124,7 +138,6 @@
             </div>
 
         </div>
-
         <div id="cards" class="cards flex flex-col justify-center gap-3 items-center">
 
         </div>
