footer accueil mobile

--- a/tailwindCss/src/index.html
+++ b/tailwindCss/src/index.html
@@ -152,7 +152,36 @@
         </button>
     </div>
 
-    <footer></footer>
+    <footer class="bg-amber-500 text-black py-10 mt-10">
+        <div class="max-w-4xl mx-auto grid grid-cols-2  gap-10 px-6">
+
+            <!-- Resources -->
+            <div class="space-y-2">
+                <h3 class="font-bold text-lg">Resources</h3>
+                <p>Blog</p>
+                <p>Best practices</p>
+                <p>Colors</p>
+                <p>Color wheel</p>
+                <p>Support</p>
+                <p>Developers</p>
+                <p>Resource library</p>
+            </div>
+
+            <!-- Use cases -->
+            <div class="space-y-2">
+                <h3 class="font-bold text-lg">Use cases</h3>
+                <p>UI design</p>
+                <p>UX design</p>
+                <p>Wireframing</p>
+                <p>Diagramming</p>
+                <p>Brainstorming</p>
+                <p>Online whiteboard</p>
+                <p>Team collaboration</p>
+            </div>
+
+        </div>
+    </footer>
+
     <script src="script.js"></script>
 </body>
 
