favoris et loading

--- a/tailwindCss/src/index.html
+++ b/tailwindCss/src/index.html
@@ -139,7 +139,7 @@
 
         </div>
         <div id="cards" class="cards flex flex-col justify-center gap-3 items-center">
-
+            <img id="loading" src="images/loading.gif">
         </div>
     </main>
     <div id="pages" class="flex justify-center items-center  mb-1.5">
