--- a/tailwindCss/src/favoris.html
+++ b/tailwindCss/src/favoris.html
@@ -1,42 +1,89 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Brief5</title>
+    <title>Mes Favoris</title>
     <link href="output.css" rel="stylesheet">
 </head>
 
-
 <body class="bg-black text-white">
-    <header>
+
+   <header>
         <div class="max-w-2xl flex justify-around items-center m-2">
             <!--menu -->
-            <div class="menu">
+            <div class="menu relative">
                 <button onclick="toggleMenu()">
                     <img src="images/menu.png" alt="Menu" class="w-8 h-8">
                 </button>
                 <!-- div choix menu -->
-                <div id="menu" class="hidden flex-col mt-2 space-y-2 bg-gray-800">
+                <div id="menuliens" class="hidden flex flex-col mt-2 space-y-2 bg-gray-800 z-10 absolute min-w-40">
                     <a href="index.html" class="bg-amber-500 text-white px-4 py-2 rounded text-center">Home</a>
                     <a href="favoris.html" class="bg-amber-500 text-white px-4 py-2 rounded text-center">Mes Favoris</a>
                 </div>
             </div>
 
+            <!-- logo -->
             <div>
                 <img src="images/logo.png" alt="Logo" class="w-12 h-12 mx-auto ">
             </div>
-            <button onclick="">
-                <img src="images/recherche.png" alt="Recherche" class="w-8 h-8">
-            </button>
-        </div>
 
+            <!-- recherche-->
+            <div class="recherche">
+                <button onclick="RechercheToggle()">
+                    <img src="images/recherche.png" alt="Recherche" class="w-8 h-8">
+                </button>
+                <!-- div choix menu -->
+                <div id="RecherchechBar" class="hidden absolute left-0.5 mt-2 z-10  bg-white rounded-2xl">
+                    <input type="search" id="searchInput" placeholder="Nom du jeu..."
+                        class="px-4 py-2 rounded-2xl bg-white text-black w-48">
+                    <button onclick="RechercheJeu()" class="ml-2 bg-amber-500 text-white px-3 py-2  rounded-r-2xl">
+                        Rechercher
+                    </button>
+                </div>
+            </div>
+
+        </div>
     </header>
-    <main>
-    </main>
-    <footer></footer>
-    <script src="script.js"></script>
+    <div class="flex justify-start mb-1.5 ml-12">
+        <h1 class="text-2xl"> Mes favourites  jeux </h1>
+    </div>
+    <!-- container des cartes -->
+    <div class="cards_favoris gap-10  flex flex-col items-center">
+        
+    </div>
+    <footer class="bg-amber-500 text-black py-10 mt-10">
+        <div class="max-w-4xl mx-auto grid grid-cols-2  gap-10 px-6">
+
+            <!-- Resources -->
+            <div class="space-y-2">
+                <h3 class="font-bold text-lg">Resources</h3>
+                <p>Blog</p>
+                <p>Best practices</p>
+                <p>Colors</p>
+                <p>Color wheel</p>
+                <p>Support</p>
+                <p>Developers</p>
+                <p>Resource library</p>
+            </div>
+
+            <!-- Use cases -->
+            <div class="space-y-2">
+                <h3 class="font-bold text-lg">Use cases</h3>
+                <p>UI design</p>
+                <p>UX design</p>
+                <p>Wireframing</p>
+                <p>Diagramming</p>
+                <p>Brainstorming</p>
+                <p>Online whiteboard</p>
+                <p>Team collaboration</p>
+            </div>
+
+        </div>
+    </footer>
+    <!-- script favoris -->
+    <script src="favoris.js"></script>
 </body>
 
 </html>
