--- a/tailwindCss/src/favoris.html
+++ b/tailwindCss/src/favoris.html
@@ -10,34 +10,34 @@
 
 <body class="bg-black text-white">
 
-   <header>
-        <div class="max-w-2xl flex justify-around items-center m-2">
+    <header>
+        <div class="w-full md:h-16 flex justify-between items-center md:px-3 lg:flex lg:w-full">
             <!--menu -->
-            <div class="menu relative">
-                <button onclick="toggleMenu()">
+            <div class="menu flex items-center">
+                <button onclick="toggleMenu()" class="lg:hidden">
                     <img src="images/menu.png" alt="Menu" class="w-8 h-8">
                 </button>
                 <!-- div choix menu -->
-                <div id="menuliens" class="hidden flex flex-col mt-2 space-y-2 bg-gray-800 z-10 absolute min-w-40">
-                    <a href="index.html" class="bg-amber-500 text-white px-4 py-2 rounded text-center">Home</a>
-                    <a href="favoris.html" class="bg-amber-500 text-white px-4 py-2 rounded text-center">Mes Favoris</a>
+                <div id="menuliens" class="hidden flex flex-col mt-2 space-y-2 bg-gray-800 z-10 absolute min-w-40 lg:flex lg:flex-row lg:justify-around lg:gap-5 lg:bg-black">
+                    <a href="index.html" class="bg-amber-500 text-white px-4 py-2 rounded text-center lg:bg-black">Home</a>
+                    <a href="favoris.html" class="bg-amber-500 text-white px-4 py-2 rounded text-center lg:bg-black lg:text-amber-500">Mes Favoris</a>
                 </div>
             </div>
 
             <!-- logo -->
             <div>
-                <img src="images/logo.png" alt="Logo" class="w-12 h-12 mx-auto ">
+                <img src="images/logo.png" alt="Logo" class="w-12 h-12 mx-auto g:relative lg:left[10px]">
             </div>
 
             <!-- recherche-->
             <div class="recherche">
-                <button onclick="RechercheToggle()">
+                <button onclick="RechercheToggle()" class="lg:hidden">
                     <img src="images/recherche.png" alt="Recherche" class="w-8 h-8">
                 </button>
-                <!-- div choix menu -->
-                <div id="RecherchechBar" class="hidden absolute left-0.5 mt-2 z-10  bg-white rounded-2xl">
+                <!-- div input recherche -->
+                <div id="RecherchechBar" class="hidden absolute mt-2 bg-white rounded-2xl lg:flex lg:relative lg:left[-3px]">
                     <input type="search" id="searchInput" placeholder="Nom du jeu..."
-                        class="px-4 py-2 rounded-2xl bg-white text-black w-48">
+                        class="rounded-2xl bg-white text-black w-48">
                     <button onclick="RechercheJeu()" class="ml-2 bg-amber-500 text-white px-3 py-2  rounded-r-2xl">
                         Rechercher
                     </button>
@@ -45,43 +45,46 @@
             </div>
 
         </div>
+
     </header>
     <div class="flex justify-start mb-1.5 ml-12">
-        <h1 class="text-2xl"> Mes favourites  jeux </h1>
+        <h1 class="text-2xl"> Mes favourites jeux </h1>
     </div>
     <!-- container des cartes -->
-    <div class="cards_favoris gap-10  flex flex-col items-center">
-        
+    <div class="cards_favoris gap-10 flex flex-col items-center md:flex-row md:flex-wrap md:gap-20 md:justify-center md:items-center">
+
     </div>
-    <footer class="bg-amber-500 text-black py-10 mt-10">
-        <div class="max-w-4xl mx-auto grid grid-cols-2  gap-10 px-6">
+    <footer class="bg-amber-500 text-black py-10 mt-10 ">
+        <div
+            class="max-w-4xl mx-auto flex flex-col items-center justify-center  gap-10 px-6 md:flex-row md:justify-around">
 
             <!-- Resources -->
-            <div class="space-y-2">
-                <h3 class="font-bold text-lg">Resources</h3>
-                <p>Blog</p>
-                <p>Best practices</p>
-                <p>Colors</p>
-                <p>Color wheel</p>
-                <p>Support</p>
-                <p>Developers</p>
-                <p>Resource library</p>
+            <div class="flex flex-col">
+                <h3 class="text-center font-bold text-lg">Resources</h3>
+                <p class="text-center">Blog</p>
+                <p class="text-center">Best practices</p>
+                <p class="text-center">Colors</p>
+                <p class="text-center">Color wheel</p>
+                <p class="text-center">Support</p>
+                <p class="text-center">Developers</p>
+                <p class="text-center">Resource library</p>
             </div>
 
             <!-- Use cases -->
-            <div class="space-y-2">
-                <h3 class="font-bold text-lg">Use cases</h3>
-                <p>UI design</p>
-                <p>UX design</p>
-                <p>Wireframing</p>
-                <p>Diagramming</p>
-                <p>Brainstorming</p>
-                <p>Online whiteboard</p>
-                <p>Team collaboration</p>
+            <div class="flex flex-col">
+                <h3 class="text-center font-bold text-lg">Use cases</h3>
+                <p class="text-center">UI design</p>
+                <p class="text-center">UX design</p>
+                <p class="text-center">Wireframing</p>
+                <p class="text-center">Diagramming</p>
+                <p class="text-center">Brainstorming</p>
+                <p class="text-center">Online whiteboard</p>
+                <p class="text-center">Team collaboration</p>
             </div>
 
         </div>
     </footer>
+
     <!-- script favoris -->
     <script src="favoris.js"></script>
 </body>
