--- a/tailwindCss/src/index.html
+++ b/tailwindCss/src/index.html
@@ -78,15 +78,13 @@
         </div>
 
         <!-- div filtres -->
-        <div class="btn_filter flex flex-col items-center mb-6 relative">
-            <button onclick="toggleFilter()"
-                class="w-52 h-12 flex flex-row justify-center gap-2 bg-white text-black font-medium py-3 px-6 rounded-full shadow-md hover:bg-amber-500 hover:text-white ">
+        <div class="btn_filter flex flex-col items-center mb-6 relative lg:items-start lg:fixed lg:left-0 lg:top-76 lg:z-20 lg:w-11">
+            <button onclick="toggleFilter()" class="lg:hidden w-52 h-12 flex flex-row justify-center gap-2 bg-white text-black font-medium py-3 px-6 rounded-full shadow-md hover:bg-amber-500 hover:text-white ">
                 <img src="images/icon_filter.png" alt="" class="w-5 h-5 mt-1">
                 filtrer
             </button>
             <!-- div choix filtres -->
-            <div id="filterchoix"
-                class="hidden w-8/12 max-w-md mx-auto bg-[#000000] text-white rounded-2xl p-6 shadow-lg space-y-6 absolute top-full mt-3 z-10">
+            <div id="filterchoix" class="lg:block lg:static lg:mt-0 lg:w-72 lg:h-auto hidden w-8/12 max-w-md mx-auto bg-[#000000] text-white rounded-2xl p-6 shadow-lg space-y-6 absolute top-full mt-3 z-10">
 
                 <!-- Plateforme -->
                 <div class="border-b border-amber-500 pb-3">
@@ -137,7 +135,7 @@
             </div>
 
         </div>
-        <div id="cards" class="cards flex flex-col md:flex-row md:flex-wrap md:gap-20  justify-center gap-3 items-center">
+        <div id="cards" class="lg:ml-[300px] cards flex flex-col md:flex-row md:flex-wrap md:gap-20  justify-center gap-3 items-center">
             <img id="loading" src="images/loading.gif">
         </div>
     </main>
